libcifx: Fix version in `cifx.pc.in` file

--- a/libcifx/cifx.pc.in
+++ b/libcifx/cifx.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: libcifx
 Description: Hilscher cifX user space library
 Requires: @REQUIRED_PACKAGES@
-Version: @DRVVERSION@
+Version: @DRV_VERSION@
 Libs: -L@libdir@ -lcifx -lpthread
 Cflags: -I@includedir@/cifx
