[#####] - api demo: Add Wall, Wextra and Wpedantic to CFLAGS.

--- a/examples/api/CMakeLists.txt
+++ b/examples/api/CMakeLists.txt
@@ -19,6 +19,7 @@ else(LIBRARY_HEADER OR LIBRARY_INC_LIB)
 endif(LIBRARY_HEADER OR LIBRARY_INC_LIB)
 
 add_executable( cifx_api ${src_dir}/cifxlinuxsample.c)
+set_target_properties(cifx_api PROPERTIES COMPILE_FLAGS " -Wall -Wextra -Wpedantic")
 target_include_directories( cifx_api BEFORE PUBLIC ${src_dir}/ ${LIBRARY_REQ_INCLUDE_DIRS})
 target_link_libraries ( cifx_api ${LIBRARY_REQ_LIBRARIES})
 install(TARGETS cifx_api DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
