--- a/examples/api/CMakeLists.txt
+++ b/examples/api/CMakeLists.txt
@@ -1,7 +1,6 @@
 
-cmake_minimum_required (VERSION 2.8.12)
-project(cifxapi)
-set(PROJECT_VERSION, 1.0.0)
+cmake_minimum_required (VERSION 3.13)
+project(cifxapi VERSION 1.0.0)
 
 set(src_dir ${CMAKE_CURRENT_LIST_DIR})
 
