[#####] - Update libcifx license to MIT.

--- a/libcifx/sbom/libcifx.cdx.in
+++ b/libcifx/sbom/libcifx.cdx.in
@@ -37,13 +37,7 @@
       ],
       "licenses": [
         {
-          "license": {
-            "name": "CLOSED",
-            "text": {
-              "content": "",
-              "contentType": "text/plain"
-            }
-          }
+          "expression" : "MIT"
         }
       ]
     }
